--- a/GuessFactory/new-header-footer-guess-factory-CA.html
+++ b/GuessFactory/new-header-footer-guess-factory-CA.html
@@ -84,13 +84,13 @@
                 <tr>
                   <td class="preheader" style="font-family: Arial, sans-serif; color: #666666; font-size: 9px; font-weight: 600; line-height: 12px; letter-spacing: .01em;">
                     To keep seeing us in your inbox, add
-                      <a href="mailto:noreply@admarketing.guess.ca" style="color: #333333;">
+                      <a _label="PREHEADER-Add-Us-To-Favorites" href="mailto:noreply@admarketing.guess.ca" style="color: #333333;">
                         noreply@admarketing.guessfactory.com
                       </a>
                      to your address book.
                   </td>
                   <td>
-                    <a class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="color: #333333; float: left; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
+                    <a _label="PREHEADER-Mirror-Page" class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="color: #333333; float: left; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
                       View in Browser
                     </a>
                   </td>
@@ -107,7 +107,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top: 16px; padding-bottom: 16px;">
-                            <a class="logo" href="https://guessfactory.ca/en/" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
+                            <a _label="HEADER-Logo" class="logo" href="https://guessfactory.ca/en/" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
                               GUESS FACTORY
                             </a>
                           </td>
@@ -119,7 +119,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top: 8px; padding-bottom: 8px; text-align: center;">
-                            <a class= "fss" href="https://www.guessfactory.ca/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a _label="HEADER-Free-Shipping-Banner" class= "fss" href="https://www.guessfactory.ca/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
                             </a>
                           </td>
@@ -142,7 +142,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/new-arrivals/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-New-Arrivals" class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/new-arrivals/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -154,7 +154,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Sale" class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -166,7 +166,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.ca/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Find-a-Store" class="buttons" href="https://www.guessfactory.ca/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -178,7 +178,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.ca/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a _label="FOOTER-Button-Join-Guess-List" class="buttons" href="https://www.guessfactory.ca/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -190,7 +190,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
+                            <a _label="FOOTER-Hashtag" class="buttons" href="https://www.guessfactory.com/en" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
                               #LOVEGUESS
                             </a>
                           </td>
@@ -202,32 +202,32 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="https://facebook.com/GUESS">
+                            <a _label="FOOTER-Social-Facebook" href="https://facebook.com/GUESS">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_facebook_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="http://twitter.com/guess">
+                            <a _label="FOOTER-Social-Twitter" href="http://twitter.com/guess">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_twitter_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="http://instagram.com/guess">
+                            <a _label="FOOTER-Social-Instagram" href="http://instagram.com/guess">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_Instagram_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="http://pinterest.com/guess/">
+                            <a _label="FOOTER-Social-Pinterest" href="http://pinterest.com/guess/">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_Pinterest_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://youtube.com/user/GUESSincTV">
+                            <a _label="FOOTER-Social-YouTube" href="https://youtube.com/user/GUESSincTV">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_youtube_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.snapchat.com/add/Guesssnaps">
+                            <a _label="FOOTER-Social-SnapChat" href="https://www.snapchat.com/add/Guesssnaps">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_snapchat_15900.png">
                             </a>
                           </td>
@@ -239,12 +239,12 @@
                       <tbody>
                         <tr>
                           <td style="width:50%; color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: right; padding-right:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" href="https://www.guess.ca/en/privacypolicy/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Privacy-Policy" class="corporate" href="https://www.guess.ca/en/privacypolicy/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="width:50%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-left:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" href="https://guessfactory.ca/en/CustomerCare/ContactUs/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Contact-Us" class="corporate" href="https://guessfactory.ca/en/CustomerCare/ContactUs/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -267,7 +267,7 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="https://www.guessfactory.ca/en" style="color:#333333;">
+                        <a _label="LEGAL-TEXT-Offer-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
                           GUESSFACTORY.ca
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
@@ -279,7 +279,7 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="https://www.guessfactory.ca/en/CustomerCare/Returns/" style="color:#333333;">
+                        <a _label="LEGAL-TEXT-Returns" href="https://www.guessfactory.ca/en/CustomerCare/Returns/" style="color:#333333;">
                           GUESSfactory.ca/en/customercare/returns/
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
@@ -290,11 +290,11 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a href="https://www.guessfactory.ca/en" style="color:#333333;">
+                      <a _label="LEGAL-TEXT-discount-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
                         GUESSFACTORY.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a href="https://www.guessfactory.ca/en" style="color:#333333;">
+                       <a _label="LEGAL-TEXT-Offer-not-valid-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
                         GUESS FACTORY
                       </a>
                        stores in the United States or Canada or at
@@ -305,12 +305,12 @@
                     </p>
                     <p style="color: #666666; font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
                       To ensure you always receive emails from GUESS, including the latest styles and exclusive events, add
-                      <a href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
+                      <a _label="LEGAL-TEXT-Add-To-Favorites" href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
                         noreply@admarketing.guessfactory.com
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://www.guess.ca/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a _label="LEGAL-TEXT-Unsubscribe" href="https://www.guess.ca/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
